--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,11 +5,12 @@ services:
     build:
       context: ../Synapse-Frontend
       dockerfile: Dockerfile.dev
+    command: npm run dev
     volumes:
       - ../Synapse-Frontend:/app
       - /app/node_modules
     ports:
-      - "3000:3000"
+      - "4173:4173"
     environment:
       - CHOKIDAR_USEPOLLING=true
 
@@ -23,7 +24,7 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - ./.env  # Load environment variables
+      - ./.env
     depends_on:
       - redis
       - postgres
@@ -35,7 +36,7 @@ services:
     volumes:
       - ../Synapse-Worker/src:/code/src
     env_file:
-      - ./.env  # Load environment variables
+      - ./.env
     depends_on:
       - redis
       - postgres
@@ -47,7 +48,7 @@ services:
     volumes:
       - ../Synapse-Worker/src:/code/src
     env_file:
-      - ./.env  # Load environment variables
+      - ./.env
     runtime: nvidia
     deploy:
       resources:
@@ -68,7 +69,7 @@ services:
   postgres:
     image: postgres:13
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}  # Use variables from .env
+      POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
