--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,12 +25,11 @@ services:
       - "8000:8000"
     env_file:
       - ./.env
-    environment:  # ADD THIS SECTION
-      - REDIS_HOST=redis  # Use service name
-      - REDIS_PORT=6379
     depends_on:
-      - redis
-      - postgres
+      postgres:
+        condition: service_healthy  # Add healthcheck dependency
+      redis:
+        condition: service_started
 
   worker-cpu:
     build:
@@ -41,12 +40,12 @@ services:
       - ../Synapse-Worker/src:/code/src
     env_file:
       - ./.env
-    environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    user: "1000:1000"  # Run as non-root user
     depends_on:
-      - redis
-      - postgres
+      postgres:
+        condition: service_healthy  # Add healthcheck dependency
+      redis:
+        condition: service_started
 
   worker-gpu:
     build:
@@ -57,20 +56,13 @@ services:
       - ../Synapse-Worker/src:/code/src
     env_file:
       - ./.env
-    environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     runtime: nvidia
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
+    user: "1000:1000"  # Run as non-root user
     depends_on:
-      - redis
-      - postgres
+      postgres:
+        condition: service_healthy  # Add healthcheck dependency
+      redis:
+        condition: service_started
 
   redis:
     image: redis:latest
@@ -82,11 +74,16 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_DB: ${POSTGRES_DB}  # Ensure this matches .env
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - pgdata_dev:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]  # Fixed variable syntax
+      interval: 5s
+      timeout: 5s
+      retries: 10  # Increase retries
 
 volumes:
-  pgdata:
+  pgdata_dev:
