--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# .env
 
 # App
 PROJECT_NAME="Synapse Backend"
@@ -8,12 +9,7 @@ POSTGRES_USER=youruser
 POSTGRES_PASSWORD=yourpassword
 POSTGRES_SERVER=postgres  # Changed from localhost
 POSTGRES_DB=yourdb
-
 # Redis - Use service names in Docker
 REDIS_HOST=redis  # Changed from localhost
 REDIS_PORT=6379
 REDIS_DB=0
-
-# Celery - Use service names in Docker
-CELERY_BROKER_URL=redis://redis:6379/0  # Changed from localhost
-CELERY_RESULT_BACKEND=redis://redis:6379/0  # Changed from localhost
