Update all modules, Redis, Docker, and vector store services

--- a/.env.dev
+++ b/.env.dev
@@ -13,3 +13,7 @@ POSTGRES_DB=yourdb
 REDIS_HOST=redis  # Changed from localhost
 REDIS_PORT=6379
 REDIS_DB=0
+# QDRANT VECTOR DATABASE
+QDRANT_HOST=qdrant
+QDRANT_PORT=6333
+QDRANT_GRPC_PORT=6334
