--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,7 @@
-# Synapse-Infra/docker-compose.dev.yml (Corrected for Full Sync)
 version: "3.9"
 
 services:
+  # -------------------- FRONTEND --------------------
   frontend:
     build:
       context: ../Synapse-Frontend
@@ -15,12 +15,12 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
 
+  # -------------------- BACKEND --------------------
   backend:
     build:
       context: ../Synapse-Backend
       dockerfile: Dockerfile.dev
     volumes:
-      # Sync full backend folder for live changes (including alembic files)
       - ../Synapse-Backend:/code
     ports:
       - "8000:8000"
@@ -31,7 +31,10 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
+      qdrant:
+        condition: service_started
 
+  # -------------------- CPU WORKER --------------------
   worker-cpu:
     build:
       context: ../Synapse-Worker
@@ -47,7 +50,10 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
+      qdrant:
+        condition: service_started
 
+  # -------------------- GPU WORKER --------------------
   worker-gpu:
     build:
       context: ../Synapse-Worker
@@ -64,12 +70,16 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
+      qdrant:
+        condition: service_started
 
+  # -------------------- REDIS --------------------
   redis:
     image: redis:latest
     ports:
       - "6379:6379"
 
+  # -------------------- POSTGRES --------------------
   postgres:
     image: pgvector/pgvector:pg13
     environment:
@@ -86,5 +96,17 @@ services:
       timeout: 5s
       retries: 10
 
+  # -------------------- QDRANT VECTOR DATABASE --------------------
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: synapse-qdrant
+    ports:
+      - "6333:6333" # REST API
+      - "6334:6334" # gRPC
+    volumes:
+      - qdrant_data:/qdrant/storage
+
+# -------------------- NAMED VOLUMES --------------------
 volumes:
   pgdata_dev: {}
+  qdrant_data: {}
