--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -33,15 +33,38 @@ services:
         condition: service_started
       qdrant:
         condition: service_started
+    environment:
+      - TRANSFORMERS_CACHE=/hf_cache
+      - HF_HOME=/hf_cache
 
-  # -------------------- CPU WORKER --------------------
+  # 🔹 NEW: Flower Monitoring Dashboard 🔹
+  flower:
+    build:
+      context: ../Synapse-Worker
+      dockerfile: Dockerfile.dev
+    container_name: synapse-flower
+    command: celery -A src.worker.app flower --address=0.0.0.0 --port=5555
+    ports:
+      # Access the dashboard at http://localhost:5556
+      - "5556:5555"
+    env_file:
+      - ./.env
+    depends_on:
+      redis:
+        condition: service_started
+
+  # 🔹 REFACTORED: Worker for light, fast tasks 🔹
+  
   worker-cpu:
     build:
       context: ../Synapse-Worker
       dockerfile: Dockerfile.dev
-    command: celery -A src.worker.app worker -l info -Q cpu_light,cpu_heavy,celery
+    container_name: synapse-worker-cpu
+    # This single worker listens to both queues, separated by a comma
+    command: sh -c "celery -A src.worker.app worker -l info -Q cpu_light,cpu_heavy -c 1"
     volumes:
       - ../Synapse-Worker:/code
+      - ./hf_cache:/hf_cache
     env_file:
       - ./.env
     user: "1000:1000"
@@ -52,26 +75,38 @@ services:
         condition: service_started
       qdrant:
         condition: service_started
-
-  # -------------------- GPU WORKER --------------------
-  worker-gpu:
-    build:
-      context: ../Synapse-Worker
-      dockerfile: Dockerfile.gpu.dev
-    command: celery -A src.worker.app worker -l info -Q gpu
-    volumes:
-      - ../Synapse-Worker:/code
-    env_file:
-      - ./.env
-    runtime: nvidia
-    user: "1000:1000"
-    depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_started
-      qdrant:
-        condition: service_started
+    environment:
+      - TRANSFORMERS_CACHE=/hf_cache
+      - HF_HOME=/hf_cache
+      - PYTHONPATH=/code
+      - GIT_PYTHON_REFRESH=quiet
+      - NLTK_DATA=/code/nltk_data
+  # 🔹 CONFIRMED: This worker is correctly configured for the 'gpu' queue.
+  # Uncomment this block when you have a GPU environment.
+  # worker-gpu:
+  #   build:
+  #     context: ../Synapse-Worker
+  #     dockerfile: Dockerfile.gpu.dev
+  #   command: sh -c "mkdir -p /hf_cache && celery -A src.worker.app worker -l info -Q gpu"
+  #   volumes:
+  #     - ../Synapse-Worker:/code
+  #     - worker_cache:/code/.cache
+  #     - hf_cache:/hf_cache
+  #   env_file:
+  #     - ./.env
+  #   runtime: nvidia
+  #   user: "1000:1000"
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #     redis:
+  #       condition: service_started
+  #     qdrant:
+  #       condition: service_started
+  #   environment:
+  #     - TRANSFORMERS_CACHE=/hf_cache
+  #     - HF_HOME=/hf_cache
+  #     - PYTHONPATH=/code
 
   # -------------------- REDIS --------------------
   redis:
