--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   frontend:
     build:
@@ -13,11 +11,73 @@ services:
       - "4173:4173"
     environment:
       - CHOKIDAR_USEPOLLING=true
+    networks:
+      - default
+
+  orchestrator:
+    build:
+      context: ../Tooling_Engine
+      dockerfile: Dockerfile.optimized
+    command: uvicorn main:app --host 0.0.0.0 --port 8010
+    ports:
+      - "8010:8010"
+    volumes:
+      - ../Tooling_Engine:/app
+    env_file:
+      - ../Tooling_Engine/.env
+    depends_on:
+      - web_search_server
+      - reminder_server
+      - file_access_server
+      - shell_server
+      - weather_server
+      - browser_server
+      - google_calendar_server
+      - gmail_server
+      - jarvis_automation_server
+      - google_drive_server
+      - google_sheets_server
+      - mcp_gateway
+      - redis
+    networks:
+      - default
+
+  # Official MCP Gateway - MCP-compliant gateway using official SDK
+  mcp_gateway:
+    build:
+      context: ../Synapse-Worker
+      dockerfile: Dockerfile.mcp-gateway
+    container_name: synapse-mcp-gateway
+    ports:
+      - "8020:8000"
+    environment:
+      - PYTHONPATH=/app
+    networks:
+      - default
+    depends_on:
+      - weather_server
+      - browser_server
+      - web_search_server
+      - gmail_server
+      - google_calendar_server
+      - reminder_server
+      - file_access_server
+      - shell_server
+      - jarvis_automation_server
+      - google_drive_server
+      - google_sheets_server
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   backend:
     build:
       context: ../Synapse-Backend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     volumes:
       - ../Synapse-Backend:/code
     ports:
@@ -29,34 +89,55 @@ services:
       redis: { condition: service_started }
       qdrant: { condition: service_started }
     environment:
+      # Database Configuration
+      - POSTGRES_USER=${POSTGRES_USER:-synapse_user}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-synapse_password}
+      - POSTGRES_SERVER=${POSTGRES_SERVER:-postgres}
+      - POSTGRES_DB=${POSTGRES_DB:-synapse_db}
+      # Redis Configuration
+      - REDIS_HOST=${REDIS_HOST:-redis}
+      - REDIS_PORT=${REDIS_PORT:-6379}
+      - REDIS_DB=${REDIS_DB:-0}
+      # Qdrant Configuration
+      - QDRANT_HOST=${QDRANT_HOST:-qdrant}
+      - QDRANT_PORT=${QDRANT_PORT:-6333}
+      - QDRANT_GRPC_PORT=${QDRANT_GRPC_PORT:-6334}
+      # JWT Configuration
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-super-secret-jwt-key-change-this-in-production}
+      - JWT_REFRESH_SECRET_KEY=${JWT_REFRESH_SECRET_KEY:-your-super-secret-refresh-key-change-this-in-production}
+      - ALGORITHM=${ALGORITHM:-HS256}
+      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-30}
+      - REFRESH_TOKEN_EXPIRE_DAYS=${REFRESH_TOKEN_EXPIRE_DAYS:-7}
+      # Google OAuth2 Configuration
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      # Session Management
+      - SESSION_SECRET_KEY=${SESSION_SECRET_KEY:-your-session-secret-key-change-this-in-production}
+      # ML Configuration
+      - ML_DEVICE=${ML_DEVICE:-cpu}
+      - USE_API_LLM=${USE_API_LLM:-false}
+      - GEMINI_API_KEY=${GEMINI_API_KEY:-}
+      - GEMINI_MODEL=${GEMINI_MODEL:-gemini-2.5-flash}
+      # Ollama Configuration
+      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://host.docker.internal:11434}
+      - OLLAMA_MODEL_PREFERENCE=${OLLAMA_MODEL_PREFERENCE:-phi3:mini}
+      # Other Configuration
       - TRANSFORMERS_CACHE=/hf_cache
       - HF_HOME=/hf_cache
       - LOG_MODE=console
-
-  flower:
-    build:
-      context: ../Synapse-Worker  # Correct build context
-      dockerfile: Dockerfile.worker # Unified Dockerfile
-      target: flower-final          # Specific build stage for flower
-    container_name: synapse-flower
-    command: celery -A src.worker.app flower --address=0.0.0.0 --port=5555
-    ports:
-      - "5556:5555"
-    env_file:
-      - ./.env
-    depends_on:
-      - redis
+    networks:
+      - default
 
   worker-cpu:
     build:
-      context: ../Synapse-Worker   # Correct build context
-      dockerfile: Dockerfile.worker  # Unified Dockerfile
-      target: worker-cpu-final       # Specific build stage for CPU
+      context: ../Synapse-Worker
+      dockerfile: Dockerfile
+      target: worker-cpu
     container_name: synapse-worker-cpu
-    command: celery -A src.worker.app worker -l info -Q cpu_light,cpu_heavy -c 1
+    command: celery -A src.worker worker -l info -Q cpu_light,cpu_heavy -c 1
     volumes:
-      - ../Synapse-Worker:/code # Mount source code for development
-      - ./hf_cache:/hf_cache   # Persist downloaded models
+      - ../Synapse-Worker:/app
+      - ./hf_cache:/hf_cache
     env_file:
       - ./.env
     user: "1000:1000"
@@ -65,23 +146,56 @@ services:
       redis: { condition: service_started }
       qdrant: { condition: service_started }
     environment:
+      # Database Configuration
+      - POSTGRES_USER=${POSTGRES_USER:-synapse_user}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-synapse_password}
+      - POSTGRES_SERVER=${POSTGRES_SERVER:-postgres}
+      - POSTGRES_DB=${POSTGRES_DB:-synapse_db}
+      # Redis Configuration
+      - REDIS_HOST=${REDIS_HOST:-redis}
+      - REDIS_PORT=${REDIS_PORT:-6379}
+      - REDIS_DB=${REDIS_DB:-0}
+      # Qdrant Configuration
+      - QDRANT_HOST=${QDRANT_HOST:-qdrant}
+      - QDRANT_PORT=${QDRANT_PORT:-6333}
+      - QDRANT_GRPC_PORT=${QDRANT_GRPC_PORT:-6334}
+      # JWT Configuration
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-super-secret-jwt-key-change-this-in-production}
+      - JWT_REFRESH_SECRET_KEY=${JWT_REFRESH_SECRET_KEY:-your-super-secret-refresh-key-change-this-in-production}
+      - ALGORITHM=${ALGORITHM:-HS256}
+      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-30}
+      - REFRESH_TOKEN_EXPIRE_DAYS=${REFRESH_TOKEN_EXPIRE_DAYS:-7}
+      # Google OAuth2 Configuration
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      # Session Management
+      - SESSION_SECRET_KEY=${SESSION_SECRET_KEY:-your-session-secret-key-change-this-in-production}
+      # Worker Configuration
       - TRANSFORMERS_CACHE=/hf_cache
       - HF_HOME=/hf_cache
       - PYTHONPATH=/code
       - GIT_PYTHON_REFRESH=quiet
       - NLTK_DATA=/code/nltk_data
       - LOG_MODE=console
+      - ML_DEVICE=cpu
       - WORKER_TYPE=cpu
+      # Ollama Configuration
+      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://host.docker.internal:11434}
+      - OLLAMA_MODEL_PREFERENCE=${OLLAMA_MODEL_PREFERENCE:-phi3:mini}
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    networks:
+      - default
 
   worker-gpu:
     build:
-      context: ../Synapse-Worker   # Correct build context
-      dockerfile: Dockerfile.worker  # Unified Dockerfile
-      target: worker-gpu-final       # Specific build stage for GPU
-    command: ["sh", "-c", "celery -A src.worker.app worker -Q gpu --pool=solo -n gpu-worker@%h"]
+      context: ../Synapse-Worker
+      dockerfile: Dockerfile
+      target: worker-gpu
+    command: ["sh", "-c", "celery -A src.worker worker -Q gpu --pool=solo -n gpu-worker@%h"]
     volumes:
-      - ../Synapse-Worker:/code # Mount source code for development
-      - ./hf_cache:/hf_cache   # Persist downloaded models
+      - ../Synapse-Worker:/app
+      - ./hf_cache:/hf_cache
     env_file:
       - ./.env
     deploy:
@@ -97,42 +211,293 @@ services:
       redis: { condition: service_started }
       qdrant: { condition: service_started }
     environment:
+      # Worker Configuration (override .env for GPU-specific settings)
       - ML_DEVICE=cuda
       - TRANSFORMERS_CACHE=/hf_cache
       - HF_HOME=/hf_cache
       - PYTHONPATH=/code
       - LOG_MODE=console
       - WORKER_TYPE=gpu
+      # Ollama Configuration
+      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://host.docker.internal:11434}
+      - OLLAMA_MODEL_PREFERENCE=${OLLAMA_MODEL_PREFERENCE:-phi3:mini}
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    networks:
+      - default
+
+  beat:
+    build:
+      context: ../Synapse-Worker
+      dockerfile: Dockerfile
+      target: worker-cpu
+    container_name: synapse-beat
+    command: celery -A src.worker beat --loglevel=INFO -S sqlalchemy_celery_beat.schedulers:DatabaseScheduler
+    volumes:
+      - ../Synapse-Worker:/app
+    depends_on:
+      postgres: { condition: service_healthy }
+      redis: { condition: service_started }
+    environment:
+      # Database Configuration
+      - POSTGRES_USER=${POSTGRES_USER:-synapse_user}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-synapse_password}
+      - POSTGRES_SERVER=${POSTGRES_SERVER:-postgres}
+      - POSTGRES_DB=${POSTGRES_DB:-synapse_db}
+      # Redis Configuration
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_DB=0
+      # Qdrant Configuration
+      - QDRANT_HOST=qdrant
+      - QDRANT_PORT=6333
+      - QDRANT_GRPC_PORT=6334
+      # JWT Configuration
+      - JWT_SECRET_KEY=your-super-secret-jwt-key-change-this-in-production
+      - JWT_REFRESH_SECRET_KEY=your-super-secret-refresh-key-change-this-in-production
+      - ALGORITHM=HS256
+      - ACCESS_TOKEN_EXPIRE_MINUTES=30
+      - REFRESH_TOKEN_EXPIRE_DAYS=7
+      # Google OAuth2 Configuration
+      - GOOGLE_CLIENT_ID=your-google-client-id
+      - GOOGLE_CLIENT_SECRET=your-google-client-secret
+      # Session Management
+      - SESSION_SECRET_KEY=your-session-secret-key-change-this-in-production
+      # Beat Configuration
+      - LOGLEVEL=INFO
+      - BEAT_DBURI=postgresql://${POSTGRES_USER:-synapse_user}:${POSTGRES_PASSWORD:-synapse_password}@postgres:5432/${POSTGRES_DB:-synapse_db}
+    networks:
+      - default
+
+  flower:
+    build:
+      context: ../Synapse-Worker
+      dockerfile: Dockerfile
+      target: worker-cpu
+    container_name: synapse-flower
+    command: celery -A src.worker flower --address=0.0.0.0 --port=5555
+    ports:
+      - "5556:5555"
+    volumes:
+      - ../Synapse-Worker:/app
+    depends_on:
+      - redis
+    environment:
+      - PYTHONPATH=/app
+      # Database Configuration
+      - POSTGRES_USER=synapse_user
+      - POSTGRES_PASSWORD=synapse_password
+      - POSTGRES_SERVER=postgres
+      - POSTGRES_DB=synapse_db
+      # Redis Configuration
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_DB=0
+      # Qdrant Configuration
+      - QDRANT_HOST=qdrant
+      - QDRANT_PORT=6333
+      - QDRANT_GRPC_PORT=6334
+      # JWT Configuration
+      - JWT_SECRET_KEY=your-super-secret-jwt-key-change-this-in-production
+      - JWT_REFRESH_SECRET_KEY=your-super-secret-refresh-key-change-this-in-production
+      - ALGORITHM=HS256
+      - ACCESS_TOKEN_EXPIRE_MINUTES=30
+      - REFRESH_TOKEN_EXPIRE_DAYS=7
+      # Google OAuth2 Configuration
+      - GOOGLE_CLIENT_ID=your-google-client-id
+      - GOOGLE_CLIENT_SECRET=your-google-client-secret
+      # Session Management
+      - SESSION_SECRET_KEY=your-session-secret-key-change-this-in-production
+    networks:
+      - default
 
   redis:
-    image: redis:latest
+    image: redis:7-alpine
     ports: ["6379:6379"]
+    networks:
+      - default
 
   postgres:
-    image: pgvector/pgvector:pg13
+    image: pgvector/pgvector:pg16
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:-synapse_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-synapse_password}
+      POSTGRES_DB: ${POSTGRES_DB:-synapse_db}
     ports: ["5433:5432"]
     volumes:
       - pgdata_dev:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-synapse_user} -d ${POSTGRES_DB:-synapse_db}"]
       interval: 5s
       timeout: 5s
       retries: 10
+    networks:
+      - default
 
   qdrant:
     image: qdrant/qdrant:latest
     container_name: synapse-qdrant
     ports:
-      - "6333:6333" # REST API
-      - "6334:6334" # gRPC
+      - "6333:6333"
+      - "6334:6334"
     volumes:
       - qdrant_data:/qdrant/storage
+    networks:
+      - default
+
+  web_search_server:
+    build:
+      context: ../Tooling_Engine
+      dockerfile: Dockerfile.optimized
+    command: uvicorn mcp_servers.web_search_server:app --host 0.0.0.0 --port 8001
+    ports:
+      - "8001:8001"
+    volumes:
+      - ../Tooling_Engine/mcp_servers:/app/mcp_servers
+    networks:
+      - default
+
+  reminder_server:
+    build:
+      context: ../Tooling_Engine
+      dockerfile: Dockerfile.optimized
+    command: uvicorn mcp_servers.reminder_server:app --host 0.0.0.0 --port 8003
+    ports:
+      - "8003:8003"
+    volumes:
+      - ../Tooling_Engine/mcp_servers:/app/mcp_servers
+    networks:
+      - default
+
+  file_access_server:
+    build:
+      context: ../Tooling_Engine
+      dockerfile: Dockerfile.optimized
+    command: uvicorn mcp_servers.file_access_server:app --host 0.0.0.0 --port 8002
+    ports:
+      - "8002:8002"
+    volumes:
+      - ../Tooling_Engine/mcp_servers:/app/mcp_servers
+      - ../Tooling_Engine/sandboxed_files:/app/safe_files
+    networks:
+      - default
+
+  shell_server:
+    build:
+      context: ../Tooling_Engine
+      dockerfile: Dockerfile.optimized
+    command: uvicorn mcp_servers.shell_server:app --host 0.0.0.0 --port 8004
+    ports:
+      - "8004:8004"
+    volumes:
+      - ../Tooling_Engine/mcp_servers:/app/mcp_servers
+    networks:
+      - default
+
+  weather_server:
+    build:
+      context: ../Tooling_Engine
+      dockerfile: Dockerfile.optimized
+    command: uvicorn mcp_servers.weather_server:app --host 0.0.0.0 --port 8006
+    env_file:
+      - .env
+    ports:
+      - "8006:8006"
+    volumes:
+      - ../Tooling_Engine/mcp_servers:/app/mcp_servers
+    networks:
+      - default
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
+
+  google_calendar_server:
+    build:
+      context: ../Tooling_Engine
+      dockerfile: Dockerfile.optimized
+    command: uvicorn mcp_servers.google_calendar_server:app --host 0.0.0.0 --port 8007
+    ports:
+      - "8007:8007"
+    volumes:
+      - ../Tooling_Engine/mcp_servers:/app/mcp_servers
+    networks:
+      - default
+    restart: unless-stopped
+
+  gmail_server:
+    build:
+      context: ../Tooling_Engine
+      dockerfile: Dockerfile.optimized
+    command: uvicorn mcp_servers.gmail_server:app --host 0.0.0.0 --port 8008
+    ports:
+      - "8008:8008"
+    volumes:
+      - ../Tooling_Engine/mcp_servers:/app/mcp_servers
+    networks:
+      - default
+    restart: unless-stopped
+
+  browser_server:
+    build:
+      context: ../Tooling_Engine
+      dockerfile: Dockerfile.vnc
+    environment:
+      - DISPLAY=:99
+    ports:
+      - "8005:8005"
+      - "6080:6080"  # noVNC web interface
+    volumes:
+      - ../Tooling_Engine/mcp_servers:/app/mcp_servers
+    networks:
+      - default
+    restart: unless-stopped
+    shm_size: 2gb
+
+  jarvis_automation_server:
+    build:
+      context: ../Tooling_Engine
+      dockerfile: Dockerfile.optimized
+    command: uvicorn mcp_servers.jarvis_automation_server:app --host 0.0.0.0 --port 8012
+    ports:
+      - "8012:8012"
+    volumes:
+      - ../Tooling_Engine/mcp_servers:/app/mcp_servers
+    networks:
+      - default
+    restart: unless-stopped
+
+  google_drive_server:
+    build:
+      context: ../Tooling_Engine
+      dockerfile: Dockerfile.optimized
+    command: uvicorn mcp_servers.google_drive_server:app --host 0.0.0.0 --port 8013
+    ports:
+      - "8013:8013"
+    volumes:
+      - ../Tooling_Engine/mcp_servers:/app/mcp_servers
+    networks:
+      - default
+    restart: unless-stopped
+
+  google_sheets_server:
+    build:
+      context: ../Tooling_Engine
+      dockerfile: Dockerfile.optimized
+    command: uvicorn mcp_servers.google_sheets_server:app --host 0.0.0.0 --port 8011
+    ports:
+      - "8011:8011"
+    volumes:
+      - ../Tooling_Engine/mcp_servers:/app/mcp_servers
+    networks:
+      - default
+    restart: unless-stopped
+
 
 volumes:
   pgdata_dev: {}
   qdrant_data: {}
   hf_cache: {}
+
+networks:
+  default:
+    name: synapse_dev_network
